進度到延伸閱讀(section.read-more) highlight 的卡片未完成

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#course-info"> 課程資訊</a>
                 </li>
                 <li>
-                    <a href="#"> 常見問題</a>
+                    <a href="#faq"> 常見問題</a>
                 </li>
                 <li>
                     <a
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                     <a
-                        href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/?_ga=2.246930503.255895828.1712984664-100655867.1712984662&_gl=1*1sifkwe*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA.*_ga_383SSRZR6Z*MTcxMzEwMjQ2MC43LjAuMTcxMzEwMjQ2NC41Ni4wLjA.*_ga_G9MHY2DC1W*MTcxMzEwMjQ2MC43LjAuMTcxMzEwMjQ2NC4wLjAuMA.."
+                        href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
                         target="_blank"
                         rel="noreferrer noopener"
                     >
@@ -417,7 +417,13 @@
                         <p>
                             捨棄單向溝通方法，4關鍵有效激發部屬潛力，讓他自主達標
                         </p>
-                        <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/?_ga=2.126795405.1890466293.1713168697-550392776.1713168697&_gl=1*i67cwf*_ga*NTUwMzkyNzc2LjE3MTMxNjg2OTc.*_ga_LJQ58J2DG7*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_383SSRZR6Z*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_G9MHY2DC1W*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuMC4wLjA." target="_blank" rel="noreferrer noopener" class="extra-course-btns">立即報名</a>
+                        <a
+                            href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                            class="extra-course-btns"
+                            >立即報名</a
+                        >
                     </div>
                 </div>
                 <div class="extra-course-cards">
@@ -437,7 +443,13 @@
                         <p>
                             部屬績效差又不改進？學會批評三部曲讓責備成為有效激勵！
                         </p>
-                        <a href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/?_ga=2.126795405.1890466293.1713168697-550392776.1713168697&_gl=1*i67cwf*_ga*NTUwMzkyNzc2LjE3MTMxNjg2OTc.*_ga_LJQ58J2DG7*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_383SSRZR6Z*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_G9MHY2DC1W*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuMC4wLjA." target="_blank" rel="noreferrer noopener" class="extra-course-btns">立即報名</a>
+                        <a
+                            href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                            class="extra-course-btns"
+                            >立即報名</a
+                        >
                     </div>
                 </div>
                 <div class="extra-course-cards">
@@ -457,7 +469,13 @@
                         <p>
                             提升團隊的敏捷判斷素養與凝聚團隊行動力，靈活應對變化
                         </p>
-                        <a href="https://eventgo.bnextmedia.com.tw/event/detail/e40259u65829158bf713/?_ga=2.104586880.1890466293.1713168697-550392776.1713168697&_gl=1*ovn6fo*_ga*NTUwMzkyNzc2LjE3MTMxNjg2OTc.*_ga_LJQ58J2DG7*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_383SSRZR6Z*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuNjAuMC4w*_ga_G9MHY2DC1W*MTcxMzM0MzYyMy4xMS4xLjE3MTMzNDQ1ODAuMC4wLjA." target="_blank" rel="noreferrer noopener" class="extra-course-btns">看課程詳情</a>
+                        <a
+                            href="https://eventgo.bnextmedia.com.tw/event/detail/e40259u65829158bf713/"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                            class="extra-course-btns"
+                            >看課程詳情</a
+                        >
                     </div>
                 </div>
                 <div class="extra-course-cards">
@@ -477,25 +495,215 @@
                         <p>
                             團隊人才荒怎麼辦？十大管理情境帶你聽見員工留下好人才
                         </p>
-                        <a href="https://edm.managertoday.com.tw/teamlead-toolbox/?utm_source=bshweb_class&utm_medium=intro&utm_campaign=2024q2teamlead" target="_blank" rel="noreferrer noopener" class="extra-course-btns">看課程詳情</a>
+                        <a
+                            href="https://edm.managertoday.com.tw/teamlead-toolbox/?utm_source=bshweb_class&utm_medium=intro&utm_campaign=2024q2teamlead"
+                            target="_blank"
+                            rel="noreferrer noopener"
+                            class="extra-course-btns"
+                            >看課程詳情</a
+                        >
                     </div>
                 </div>
             </div>
         </section>
 
+        <section class="read-more">
+            <div class="container">
+                <header class="section-header">
+                    <h2>延伸閱讀</h2>
+                    <h3><em>- Article -</em></h3>
+                </header>
+                <article class="read-more-box">
+                    <h3>教練領導</h3>
+                    <ul>
+                        <li>
+                            <a
+                                href="https://www.managertoday.com.tw/articles/view/55859"
+                                target="_blank"
+                                rel="noreferrer noopener"
+                            >
+                                <figure>
+                                    <img
+                                        src="./assets/read-more-p1.jpg"
+                                        alt=""
+                                    />
+                                    <figcaption>
+                                        最優秀的人選，不一定適合你公司！7個面試提問，選中最貼近公司文化的員工
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.managertoday.com.tw/articles/view/55102/"
+                                target="_blank"
+                                rel="noreferrer noopener"
+                            >
+                                <figure>
+                                    <img
+                                        src="./assets/read-more-p2.jpg"
+                                        alt=""
+                                    />
+                                    <figcaption>
+                                        公司為何要導入「教練制」？研究發現有５大幫助
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
+                        <li class="read-more-highlight">
+                            <a
+                                href="https://www.managertoday.com.tw/podcast/view/219"
+                                target="_blank"
+                                rel="noreferrer noopener"
+                            >
+                                <figure>
+                                    <img
+                                        src="./assets/read-more-p3.jpg"
+                                        alt=""
+                                    />
+                                    <figcaption>
+                                        EP208【職場來一課】當主管心好累？跟百大企業御用教練陳煥庭學帶人的技術
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
+                    </ul>
+                </article>
+                <article class="read-more-box">
+                    <h3>關鍵指導力</h3>
+                    <ul>
+                        <li>
+                            <a
+                                href="https://www.managertoday.com.tw/articles/view/57851/"
+                                target="_blank"
+                                rel="noreferrer noopener"
+                            >
+                                <figure>
+                                    <img
+                                        src="./assets/read-more-p4.jpg"
+                                        alt=""
+                                    />
+                                    <figcaption>
+                                        指導不成，反讓部屬氣得丟辭呈？建設性批評這樣說，他才願意聽、甘心改
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.managertoday.com.tw/articles/view/62169/"
+                                target="_blank"
+                                rel="noreferrer noopener"
+                            >
+                                <figure>
+                                    <img
+                                        src="./assets/read-more-p5.jpg"
+                                        alt=""
+                                    />
+                                    <figcaption>
+                                        你愈不講人情，員工愈敢走人！與員工溝通時，好主管會先處理這件事
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.managertoday.com.tw/articles/view/55320/"
+                                target="_blank"
+                                rel="noreferrer noopener"
+                            >
+                                <figure>
+                                    <img
+                                        src="./assets/read-more-p6.jpg"
+                                        alt=""
+                                    />
+                                    <figcaption>
+                                        主管想當好人，反而會害了部屬！不會教也不敢罵人的主管，帶不出優秀團隊
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
+                    </ul>
+                </article>
+            </div>
+        </section>
+
+        <section class="faq" id="faq">
+            <div class="container">
+                <header class="section-header">
+                    <h2>常見問題</h2>
+                    <h3><em>- Q&A -</em></h3>
+                </header>
+                <div class="faq-box">
+                    <div class="questions">
+                        <h3>
+                            Q. 雙日課一定要一起買嗎？只上單堂會影響學習效果嗎？
+                        </h3>
+                        <p>
+                            可以只報名單堂。兩堂課程內容是獨立且完整的，沒有先修或基礎需求，若您目前只對單一主題有興趣，可以只報名單堂，之後再依需要參加即可。商學院精選全新推出給業務人員的兩堂課，推薦您一起參與，完整學習策略性思維，讓業務實戰再進擊！
+                        </p>
+                    </div>
+                    <div class="questions">
+                        <h3>
+                            Q. 公司申請報帳有時間限制，付款後多久可以收到發票？
+                        </h3>
+                        <p>
+                            本公司採用電子發票，發票將在您付款完成後的兩週內由「綠界科技
+                            ECPay」寄送電子發票開立通知至您報名時填寫的發票收件人
+                            email。
+                        </p>
+                    </div>
+                    <div class="questions">
+                        <h3>Q. 付款後若臨時有行程更動，可以退費嗎？</h3>
+                        <p>
+                            Q. 付款後若臨時有行程更動，可以退費嗎？
+                            若無法出席課程，請於課前來電或來信告知，可為您保留名額半年，半年內若對其他課程有興趣可轉移至該堂課
+                            (金額不夠須補差額，若低於保留金額恕不另退費，限轉移乙次)；如需申請退款請於課程日前
+                            8
+                            日辦理，我們將收取課程的一成費用以及銀行轉帳之手續費，逾期恕不受理。例：2/25
+                            課程申請退票日於 2/18 23:59 截止。
+                        </p>
+                    </div>
+                    <div class="questions">
+                        <h3>
+                            Q. 我們公司同事超過 3 位一起報名，雜誌可以分成 3
+                            個月份收嗎？
+                        </h3>
+                        <p>
+                            2 人以上報名，我們會自動做雜誌接續處理
+                            ，統一給訂購人收件，同時發票開立一張，如果有不同需求再來電告知，謝謝。
+                        </p>
+                    </div>
+                    <div class="questions">
+                        <h3>
+                            Q.
+                            公司請款流程會超過三天，線上報名會逾期，該怎麼辦？
+                        </h3>
+                        <p>
+                            請填寫「<a
+                                href="https://bnext.surveycake.biz/s/7RwgB"
+                                target="_blank"
+                                rel="noreferrer noopener"
+                                >課程登記</a
+                            >」表單，並於付款後填寫「<a
+                                href="https://bnext.surveycake.biz/s/YbGyy"
+                                target="_blank"
+                                rel="noreferrer noopener"
+                                >匯款完成</a
+                            >」表單，即算報名成功。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer>
             <p>
                 <strong>Bnext Media 媒體群</strong>
                 <b>|</b>
+                <span><a href="https://www.bnext.com.tw/">數位時代</a></span>
                 <span
                     ><a
-                        href="https://www.bnext.com.tw/?_ga=2.146564081.454394998.1712984664-100655867.1712984662&_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
-                        >數位時代</a
-                    ></span
-                >
-                <span
-                    ><a
-                        href="https://www.managertoday.com.tw/?_ga=2.146564081.454394998.1712984664-100655867.1712984662&_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
+                        href="https://www.managertoday.com.tw/"
                         target="_blank"
                         rel="noreferrer noopener"
                         >經理人</a
@@ -503,7 +711,7 @@
                 >
                 <span
                     ><a
-                        href="https://www.shoppingdesign.com.tw/?_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
+                        href="https://www.shoppingdesign.com.tw/"
                         target="_blank"
                         rel="noreferrer noopener"
                         >Shopping Design</a
@@ -511,7 +719,7 @@
                 >
                 <span
                     ><a
-                        href="https://meet.bnext.com.tw/?_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
+                        href="https://meet.bnext.com.tw/"
                         target="_blank"
                         rel="noreferrer noopener"
                         >創業小聚</a
@@ -519,7 +727,7 @@
                 >
                 <span
                     ><a
-                        href="https://fc.bnext.com.tw/?_gl=1*17nqxne*_ga*MTAwNjU1ODY3LjE3MTI5ODQ2NjI.*_ga_LJQ58J2DG7*MTcxMzEwMjQ2MC44LjEuMTcxMzEwNDEzNi42MC4wLjA."
+                        href="https://fc.bnext.com.tw/"
                         target="_blank"
                         rel="noreferrer noopener"
                         >未來商務</a
