零星樣式修正

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             href="/assets/favicon/favicon-32x32.png"
             type="image/x-icon"
         />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
         <nav>
@@ -55,22 +55,24 @@
         <div class="to-the-top">
             <div class="arrow"></div>
         </div>
-        <header>
-            <a
-                href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
-                target="_blank"
-                rel="noreferrer noopener"
-            >
-                <img
-                    src="/assets/web_header.png"
-                    alt="限時優惠：課程八折起，報名加贈經理人月刊6期，點擊領取優惠"
-                />
-            </a>
+        <header class="top-header">
+            <div class="container">
+                <a
+                    href="https://eventgo.bnextmedia.com.tw/event/view/e11241u6576af709b72d/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                >
+                    <img
+                        src="/assets/web_header.png"
+                        alt="限時優惠：課程八折起，報名加贈經理人月刊6期，點擊領取優惠"
+                    />
+                </a>
 
-            <img
-                src="/assets/top-landscape.svg"
-                alt="帶人的技術：(1)教練領導學，(2)關鍵指導力。企業指定→主管養成計畫"
-            />
+                <img
+                    src="/assets/top-landscape.svg"
+                    alt="帶人的技術：(1)教練領導學，(2)關鍵指導力。企業指定→主管養成計畫"
+                />
+            </div>
         </header>
 
         <section class="recomm">
